docs(blog): add AWS static website infrastructure guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,9 @@ nav:
           - 300 Days 2025: blog/300-days-2025.md
           - 300 Days 2024: blog/300-days-2024.md
       - Technical Articles:
+          - AWS Static Website Infrastructure: blog/aws-static-website-infrastructure.md
           - Terraform AWS Setup: blog/terraform-aws-setup.md
+          - Why Terraform for Multi-Cloud: blog/why-terraform-for-multi-cloud.md
           - HagXwon Architecture: blog/hagxwon-architecture.md
           - Research Papers: blog/research-papers.md
   - Contact: contact.md
