--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,14 +48,15 @@ nav:
   - Blog:
       - Overview: blog/index.md
       - Learning Logs:
-          - 300 Days 2025: blog/300-days-2025.md
-          - 300 Days 2024: blog/300-days-2024.md
-      - Technical Articles:
-          - AWS Static Website Infrastructure: blog/aws-static-website-infrastructure.md
-          - Terraform AWS Setup: blog/terraform-aws-setup.md
-          - Why Terraform for Multi-Cloud: blog/why-terraform-for-multi-cloud.md
-          - HagXwon Architecture: blog/hagxwon-architecture.md
-          - Research Papers: blog/research-papers.md
+          - 300 Days 2025: blog/logs/300-days-2025.md
+          - 300 Days 2024: blog/logs/300-days-2024.md
+      - Technical Posts:
+          - AWS Static Website Infrastructure: blog/posts/aws-static-website-infrastructure.md
+          - Terraform AWS Setup: blog/posts/terraform-aws-setup.md
+          - Why Terraform for Multi-Cloud: blog/posts/why-terraform-for-multi-cloud.md
+          - HagXwon Architecture: blog/posts/hagxwon-architecture.md
+      - Research:
+          - Research Papers: blog/research/research-papers.md
   - Contact: contact.md
 
 plugins:
