--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ theme:
     - search.suggest
     - search.highlight
     - content.code.copy
+    - tags
   custom_dir: docs/overrides
 
 nav:
@@ -45,22 +46,30 @@ nav:
       - Knowledge Graph Agents: projects/knowledge-graph-agents.md
       - Discord MCP Server: projects/discord-mcp.md
       - Korean Learning MUD: projects/korean-learning-mud.md
-  - Blog:
-      - Overview: blog/index.md
-      - Learning Logs:
-          - 300 Days 2025: blog/logs/300-days-2025.md
-          - 300 Days 2024: blog/logs/300-days-2024.md
-      - Technical Posts:
-          - AWS Static Website Infrastructure: blog/posts/aws-static-website-infrastructure.md
-          - Terraform AWS Setup: blog/posts/terraform-aws-setup.md
-          - Why Terraform for Multi-Cloud: blog/posts/why-terraform-for-multi-cloud.md
-          - HagXwon Architecture: blog/posts/hagxwon-architecture.md
-      - Research:
-          - Research Papers: blog/research/research-papers.md
+  - Blog: blog/index.md
+  - Research: blog/research/research-papers.md
+  - Learning Journey:
+      - Overview: learning-journey.md
+      - 300 Days 2025: blog/logs/300-days-2025.md
+      - 300 Days 2024: blog/logs/300-days-2024.md
   - Contact: contact.md
 
 plugins:
   - search
+  - blog:
+      blog_dir: blog
+      post_dir: '{blog}/posts'
+      post_date_format: medium
+      post_url_format: '{slug}'
+      archive: true
+      archive_name: Archive
+      archive_date_format: MMMM yyyy
+      archive_url_format: 'archive/{date}'
+      categories: true
+      categories_name: Categories
+      categories_url_format: 'category/{slug}'
+      pagination: true
+      pagination_per_page: 10
   - minify:
       minify_html: true
       minify_js: true
