--- a/.github/workflows/state.yml
+++ b/.github/workflows/state.yml
@@ -1,17 +1,18 @@
 name: Deploy State Infrastructure
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - 'aws/state/**'
-      - '.github/workflows/state.yml'
-  pull_request:
-    branches: [main]
-    paths:
-      - 'aws/state/**'
-      - '.github/workflows/state.yml'
-  workflow_dispatch: # Allow manual triggering
+  workflow_dispatch: # Only allow manual triggering
+  # Disabled automatic triggers since state infrastructure is already deployed
+  # push:
+  #   branches: [main]
+  #   paths:
+  #     - 'aws/state/**'
+  #     - '.github/workflows/state.yml'
+  # pull_request:
+  #   branches: [main]
+  #   paths:
+  #     - 'aws/state/**'
+  #     - '.github/workflows/state.yml'
 
 permissions:
   id-token: write # Required for OIDC
