fix: improve state workflow to handle existing infrastructure
- Add -detailed-exitcode flag to terraform plan for proper exit codes
- Handle case where infrastructure already exists gracefully
- Exit code 0: No changes needed (success)
- Exit code 2: Changes detected (success, proceed with apply)
- Exit code 1: Error (failure)
- Follows bootstrap infrastructure pattern - deploy once manually, update via CI/CD

--- a/.github/workflows/state.yml
+++ b/.github/workflows/state.yml
@@ -53,16 +53,34 @@ jobs:
         working-directory: aws/state
         run: |
           echo "Creating Terraform plan..."
-          terraform plan -no-color
-          echo "Terraform plan completed"
+          terraform plan -no-color -detailed-exitcode
+          PLAN_EXIT_CODE=$?
+          if [ $PLAN_EXIT_CODE -eq 0 ]; then
+            echo "No changes needed - infrastructure is up to date"
+          elif [ $PLAN_EXIT_CODE -eq 2 ]; then
+            echo "Changes detected - plan completed successfully"
+          else
+            echo "Plan failed with exit code $PLAN_EXIT_CODE"
+            exit $PLAN_EXIT_CODE
+          fi
 
       - name: Terraform Apply (State)
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         working-directory: aws/state
         run: |
-          echo "Applying Terraform changes..."
-          terraform apply -auto-approve -no-color
-          echo "State infrastructure deployment completed"
+          echo "Checking if changes are needed..."
+          terraform plan -no-color -detailed-exitcode
+          PLAN_EXIT_CODE=$?
+          if [ $PLAN_EXIT_CODE -eq 0 ]; then
+            echo "No changes needed - skipping apply"
+          elif [ $PLAN_EXIT_CODE -eq 2 ]; then
+            echo "Applying Terraform changes..."
+            terraform apply -auto-approve -no-color
+            echo "State infrastructure deployment completed"
+          else
+            echo "Plan failed - cannot apply"
+            exit $PLAN_EXIT_CODE
+          fi
 
       - name: Deployment summary
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
