--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,7 +79,7 @@ markdown_extensions:
   - pymdownx.critic
   - pymdownx.details
   - pymdownx.snippets:
-      base_path: ['docs']
+      base_path: ['.']
       check_paths: true
   - admonition
   - attr_list
